[gd_scene load_steps=2 format=2]

[ext_resource path="res://misc/savegame.gd" type="Script" id=1]

[node name="savegame" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = -53.3288
margin_top = -16.5178
margin_right = 49.6712
margin_bottom = 20.4822
text = "savegame"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 102.882
margin_top = -22.181
margin_right = 193.882
margin_bottom = 24.819
text = "load game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 41.5304
margin_top = 41.0585
margin_right = 123.53
margin_bottom = 104.058
text = "hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 19.3494
margin_top = -130.254
margin_right = 114.349
margin_bottom = -67.2544
text = "kaka"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
